src/elb/templates/nlb-alb-lambda.yml
# elb/templates/nlb-alb-lambda.yml
AWSTemplateFormatVersion: "2010-09-09"
Description: Network load balancer with ALB target group and Lambda target group

Parameters:
  VpcId:
    Type: AWS::EC2::VPC::Id
    Description: VPC ID
    Default: vpc-01d5cfd2cad5314f1

  SubnetIds:
    Type: List<AWS::EC2::Subnet::Id>
    Description: Subnet IDs
    Default: subnet-00ee516fa04d610fe,subnet-0c99e2001f0ae6c0a

Resources:
  # Lambda
  ALBTargetFunctionRole:
    Type: AWS::IAM::Role
    Properties:
      RoleName:
        Fn::Sub: ${AWS::StackName}-ALBTargetFunctionRole-${AWS::Region}
      Description: Service role for ALBTargetFunction
      AssumeRolePolicyDocument:
        Version: "2012-10-17"
        Statement:
          - Effect: Allow
            Principal:
              Service:
                Fn::Sub: lambda.${AWS::URLSuffix}
            Action:
              - sts:AssumeRole
      ManagedPolicyArns:
        - Fn::Sub: arn:${AWS::Partition}:iam::aws:policy/service-role/AWSLambdaBasicExecutionRole

  ALBTargetFunctionLogGroup:
    Type: AWS::Logs::LogGroup
    Properties:
      LogGroupName:
        Fn::Sub: /aws/lambda/${AWS::StackName}-ALBTargetFunction

  ALBTargetFunction:
    Type: AWS::Lambda::Function
    Properties:
      FunctionName:
        Fn::Sub: ${AWS::StackName}-ALBTargetFunction
      Description: ALB target function
      Role:
        Fn::GetAtt: ALBTargetFunctionRole.Arn
      Runtime: nodejs20.x
      Handler: index.handler
      Architectures:
        - arm64
      LoggingConfig:
        LogGroup:
          Ref: ALBTargetFunctionLogGroup
      Code:
        ZipFile: |
          const body = "AAABAAQAEBAAAAEAIADjAQAARgAAABgYAAABACAADAMAACkCAAAgIAAAAQAgADkDAAA1BQAAQEAAAAEAIACwBgAAbggAAIlQTkcNChoKAAAADUlIRFIAAAAQAAAAEAgDAAAAKC0PUwAAAORQTFRFIiIiIiIiIiIiIiIiIiIiIiIiMlBYPXKAKTc7Kjo+SJCkLUJHRYiaOGRvNVhiNltlS5muS5qvMU1VOWdzM1NcSZOnOmd0JzAzQHuLVrnUVLTPQX2NVrvWQHmJNlxmSJKmLUNJSZSoRYibKztAN19pN19qRoqdSparS5uwSJCjLUJIYdr7LEBGQ4OUTJ2zJi4wV73ZTqO6SZOoJCkrQoGRSpWqUq/IP3aGPnOBPnWEU7HKPXF/UKnBUKjAUKe/LD9ENFVeJSstTaC2S5iuJSssMk9YKzxBTJyyIyYmRIaYJSwuSZWpdvRU9gAAAAV0Uk5TSebnSuRl [...]

          exports.handler = async event => {
            console.log(JSON.stringify(event, null, 2));
            const response = {
              statusCode: 200,
              statusDescription: "200 OK",
              multiValueHeaders: {
                "Content-Type": ["image/x-icon"],
                "Content-Disposition": ['attachment; filename="favicon.ico"'],
              },
              body,
              isBase64Encoded: true,
            };
            console.log(JSON.stringify(response, null, 2));
            return response;
          };

  ALBTargetFunctionVersion:
    Type: AWS::Lambda::Version
    Properties:
      FunctionName:
        Ref: ALBTargetFunction
      Description: ALB target function version

  ALBTargetFunctionAlias:
    Type: AWS::Lambda::Alias
    Properties:
      Name:
        Fn::Sub: ${AWS::StackName}-ALBTargetFunctionAlias
      FunctionName:
        Ref: ALBTargetFunction
      FunctionVersion:
        Fn::GetAtt: ALBTargetFunctionVersion.Version

  ALBTargetFunctionAliasPermission:
    Type: AWS::Lambda::Permission
    Properties:
      Action: lambda:InvokeFunction
      FunctionName:
        Ref: ALBTargetFunctionAlias
      Principal:
        Fn::Sub: elasticloadbalancing.${AWS::URLSuffix}
      SourceAccount:
        Ref: AWS::AccountId
      SourceArn:
        Fn::Sub: arn:${AWS::Partition}:elasticloadbalancing:${AWS::Region}:${AWS::AccountId}:targetgroup/*

  # ALB
  ALBTargetGroup:
    Type: AWS::ElasticLoadBalancingV2::TargetGroup
    DependsOn: ALBTargetFunctionAliasPermission
    Properties:
      Name:
        Fn::Sub: ${AWS::StackName}-ALBTargetGroup
      TargetType: lambda
      Targets:
        - Id:
            Ref: ALBTargetFunctionAlias
      IpAddressType: ipv4
      HealthCheckEnabled: true
      HealthCheckPath: /
      Matcher:
        HttpCode: 200
      HealthCheckIntervalSeconds: 35
      HealthCheckTimeoutSeconds: 30
      HealthyThresholdCount: 5
      UnhealthyThresholdCount: 5
      TargetGroupAttributes:
        - Key: lambda.multi_value_headers.enabled
          Value: true

  ALBSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupName:
        Fn::Sub: ${AWS::StackName}-ALBSecurityGroup
      GroupDescription: ALB security group
      VpcId:
        Ref: VpcId
      Tags:
        - Key: Name
          Value: ALBSecurityGroup

  ALBSecurityGroupIngress:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      Description: HTTP inbound rule
      GroupId:
        Ref: ALBSecurityGroup
      IpProtocol: tcp
      FromPort: 80
      ToPort: 80
      SourceSecurityGroupId:
        Ref: NLBSecurityGroup

  ALB:
    Type: AWS::ElasticLoadBalancingV2::LoadBalancer
    Properties:
      Name:
        Fn::Sub: ${AWS::StackName}-ALB
      Type: application
      IpAddressType: ipv4
      Scheme: internal
      SecurityGroups:
        - Ref: ALBSecurityGroup
      Subnets:
        Ref: SubnetIds

  ALBListener:
    Type: AWS::ElasticLoadBalancingV2::Listener
    DependsOn: NLBTargetGroup
    Properties:
      LoadBalancerArn:
        Ref: ALB
      Port: 80
      Protocol: HTTP
      DefaultActions:
        - Type: forward
          TargetGroupArn:
            Ref: ALBTargetGroup

  # NLB
  NLBTargetGroup:
    Type: AWS::ElasticLoadBalancingV2::TargetGroup
    Properties:
      Name:
        Fn::Sub: ${AWS::StackName}-NLBTargetGroup
      TargetType: alb
      Targets:
        - Id:
            Ref: ALB
      IpAddressType: ipv4
      Protocol: TCP
      Port: 80
      VpcId:
        Ref: VpcId
      HealthCheckPath: /
      HealthCheckProtocol: HTTP
      Matcher:
        HttpCode: 200
      HealthCheckIntervalSeconds: 15
      HealthCheckTimeoutSeconds: 10
      HealthyThresholdCount: 5
      UnhealthyThresholdCount: 3

  NLBSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupName:
        Fn::Sub: ${AWS::StackName}-NLBSecurityGroup
      GroupDescription: NLB security group
      VpcId:
        Ref: VpcId
      SecurityGroupIngress:
        - Description: HTTP inbound rule
          IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0
      SecurityGroupEgress:
        - Description: HTTP outbound rule
          IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          DestinationSecurityGroupId:
            Ref: ALBSecurityGroup
      Tags:
        - Key: Name
          Value: NLBSecurityGroup

  NLB:
    Type: AWS::ElasticLoadBalancingV2::LoadBalancer
    Properties:
      Name:
        Fn::Sub: ${AWS::StackName}-NLB
      Type: network
      IpAddressType: ipv4
      Scheme: internet-facing
      SecurityGroups:
        - Ref: NLBSecurityGroup
      Subnets:
        Ref: SubnetIds

  NLBListener:
    Type: AWS::ElasticLoadBalancingV2::Listener
    Properties:
      LoadBalancerArn:
        Ref: NLB
      Port: 80
      Protocol: TCP
      DefaultActions:
        - Type: forward
          TargetGroupArn:
            Ref: NLBTargetGroup

Outputs:
  NLBUrl:
    Description: URL of the NLB
    Value:
      Fn::Sub: http://${NLB.DNSName}
